Added routes to app.js, added index.ejs view and and index.js route.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>Chat Buddies</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <base href="/">
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-
-    <div>
-      <h2>Hello Nick</h2>
-    </div>
 
     <div ui-view=""></div>
 
