client.js => Added signup and login controller along with setting up my ui-routes for my signup/login process...renamed home.ejs, login.ejs, error.ejs, index.ejs, signup.ejs to home.html, login.html, index.html, error.html and signup.html...modified the home.html file changed the ui-view= to just ui-view.

--- a/views/index.html
+++ b/views/index.html
@@ -5,9 +5,9 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <base href="/">
   </head>
-  <body>
+  <body ng-app="chatBuddies">
 
-    <div ui-view=""></div>
+    <div ui-view></div>
 
     <script type="text/javascript" src="angular/angular.min.js" defer></script>
     <script type="text/javascript" src="angular-ui-router/release/angular-ui-router.min.js" defer></script>
