A user can complete the happy-path signup process. Error handling and other details should be added later.

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,7 +1,6 @@
 <h1>Chat Buddies</h1>
 <p>Chat with your friends real-time!</p>
 
-<p>This is the Home view</p>
 
-<!-- <button>Login</button>
-<button>Signup</button> -->
+<button ui-sref="login">Login</button>
+<button ui-sref="signup">Signup</button>
