--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,5 +12,17 @@
     <script type="text/javascript" src="angular/angular.min.js" defer></script>
     <script type="text/javascript" src="angular-ui-router/release/angular-ui-router.min.js" defer></script>
     <script type="text/javascript" src="javascripts/client.js" defer></script>
+    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyD_9Mr2blr52jjKQKqgJ8z-e_SinMKeMic",
+        authDomain: "project-3444843529926405572.firebaseapp.com",
+        databaseURL: "https://project-3444843529926405572.firebaseio.com",
+        storageBucket: "project-3444843529926405572.appspot.com",
+      };
+      firebase.initializeApp(config);
+
+    </script>
   </body>
 </html>
