--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -1,1 +1,17 @@
-<h1>This is the User's profile page</h1>
+<img alt="user-profile" src="https://firebasestorage.googleapis.com/v0/b/project-3444843529926405572.appspot.com/o/batman.jpg?alt=media&token=433c44ce-5f15-4c71-a1e2-d54d7f03a137" height="150" width="150">
+<p>username</p>
+
+<form>
+  <div>
+    <input type="text" placeholder="Enter a username">
+  </div>
+
+  <div>
+    <input type="submit" value="Search">
+  </div>
+</form>
+
+
+
+
+<a href="" ng-click="ctrl.signOut()">Sign Out</a>
