--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -1,5 +1,5 @@
-<img alt="user-profile" src="https://firebasestorage.googleapis.com/v0/b/project-3444843529926405572.appspot.com/o/batman.jpg?alt=media&token=433c44ce-5f15-4c71-a1e2-d54d7f03a137" height="150" width="150">
-<p>username</p>
+<img ng-model="ctrl.currentUser" alt="user-profile" src="{{ ctrl.currentUser.photoURL }}" height="150" width="150">
+<p>{{ ctrl.currentUser.username }}</p>
 
 <form>
   <div>
