--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
     <div ui-view></div>
 
     <script type="text/javascript" src="angular/angular.min.js" defer></script>
+    <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>
     <script type="text/javascript" src="angular-ui-router/release/angular-ui-router.min.js" defer></script>
     <script type="text/javascript" src="javascripts/client.js" defer></script>
     <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
