Working prototype of a chat app.

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,6 +1,8 @@
-<h1>Chat Buddies</h1>
-<p>Chat with your friends real-time!</p>
+ <div class="jumbotron">
+  <h1>Chat Buddies</h1>
+  <p>Chat with your friends real-time!</p>
 
 
-<button ui-sref="login">Login</button>
-<button ui-sref="signup">Signup</button>
+  <button type="button" class="home-page btn btn-primary btn-large" ui-sref="login">Login</button>
+  <button type="button" class="home-page btn btn-primary btn-large" ui-sref="signup">Signup</button>
+</div>
