--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,21 +1,23 @@
-<div>
-  <h1>Login to Chat Buddies</h1>
+<div class="cushion">
+  <div class="head-center">
+    <h1>Login to Chat Buddies</h1>
+  </div>
   <br>
 
   <form ng-submit="ctrl.login()">
-    <div>
+    <div class="form-group">
       <label>Email</label><br>
-      <input type="text" name="email" ng-model="ctrl.user.email"><br>
+      <input class="form-control" type="text" name="email" ng-model="ctrl.user.email"><br>
     </div>
 
-    <div>
+    <div class="form-group">
       <label>Password</label><br>
-      <input type="password" name="password" ng-model="ctrl.user.password">
+      <input class="form-control" type="password" name="password" ng-model="ctrl.user.password">
     </div>
     <br>
 
-    <div>
-      <input type="submit" value="Log Me Up!"><br>
+    <div class="form-group">
+      <input class="btn btn-default" type="submit" value="Log Me In!"><br>
     </div>
   </form>
   <br>
