--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,11 +10,13 @@
     <div ui-view></div>
 
     <script type="text/javascript" src="angular/angular.min.js" defer></script>
-    <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.0.4/firebase.js"></script>
+    <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js" defer></script>
     <script type="text/javascript" src="angular-ui-router/release/angular-ui-router.min.js" defer></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <script type="text/javascript" src="javascripts/ui-bootstrap-1.3.3.min.js" defer></script>
     <script type="text/javascript" src="javascripts/client.js" defer></script>
-    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
-    <script>
+    <script type="text/javascript" defer>
       // Initialize Firebase
       var config = {
         apiKey: "AIzaSyD_9Mr2blr52jjKQKqgJ8z-e_SinMKeMic",
@@ -22,6 +24,7 @@
         databaseURL: "https://project-3444843529926405572.firebaseio.com",
         storageBucket: "project-3444843529926405572.appspot.com",
       };
+
       firebase.initializeApp(config);
 
     </script>
