--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="angular-ui-router/release/angular-ui-router.min.js" defer></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <script type="text/javascript" src="javascripts/ui-bootstrap-1.3.3.min.js" defer></script>
+    <!-- <script src="ng-file-upload(.min).js" defer></script> -->
     <script type="text/javascript" src="javascripts/client.js" defer></script>
     <script type="text/javascript" defer>
       // Initialize Firebase
