--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 
     <div ui-view></div>
 
-    <script type="text/javascript" src="angular/angular.min.js" defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js" defer></script>
     <script src="https://www.gstatic.com/firebasejs/3.0.4/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js" defer></script>
     <script type="text/javascript" src="angular-ui-router/release/angular-ui-router.min.js" defer></script>
