--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js" defer></script>
     <script src="https://www.gstatic.com/firebasejs/3.0.4/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js" defer></script>
-    <script type="text/javascript" src="angular-ui-router/release/angular-ui-router.min.js" defer></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js" defer></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <script type="text/javascript" src="javascripts/ui-bootstrap-1.3.3.min.js" defer></script>
     <!-- <script src="ng-file-upload(.min).js" defer></script> -->
