--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -13,12 +13,14 @@
     <h3>{{ ctrl.currentUser.username }}</h3>
     <br><br>
 
-
     <form>
-        <label><h2>Search to Find Someone to Talk With</h2></label>
-        <input type="text">
-
-        <input type="submit">
+      <div class="form-group">
+        <label><h3>Search to Find Someone to Talk With</h3></label><br>
+        <input class="form-control" type="text"><br>
+      </div>
+      <div class="form-group">
+        <input class="btn btn-primary" type="submit" value="Search">
+      </div>
     </form>
 
 
