Changed login button to blue.

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -17,7 +17,7 @@
     <br>
 
     <div class="form-group">
-      <input class="btn btn-default" type="submit" value="Log Me In!"><br>
+      <input class="btn btn-primary" type="submit" value="Log Me In!"><br>
     </div>
   </form>
   <br>
