--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -13,16 +13,33 @@
     <h3>{{ ctrl.currentUser.username }}</h3>
     <br><br>
 
-    <form ng-keyup="ctrl.searchForUsername()">
-      <div class="form-group">
-        <label><h3>Search to Find Someone to Talk With</h3></label><br>
-        <input ng-model="ctrl.searchTerm.term" class="form-control" type="text"><br>
-      </div>
-      <div class="form-group">
-        <input class="btn btn-primary" type="submit" value="Search">
-      </div>
-    </form>
+    <div class="comment-box">
+      <ul>
+        <li ng-repeat="message in ctrl.messages">
+          <div class="well well-sm">
+            <dl>
+              <dt>{{ message.username }} {{ message.createdAt | date:'medium' }}</dt>
+              <dd>{{ message.content }}</dd>
+            </dl>
+          </div>
+        </li>
+      </ul>
+    </div>
+    <br><br>
 
+    <form ng-submit="ctrl.sendMessage()">
+      <div class="form-group">
+        <input class="form-control" ng-model="ctrl.newMessage.content" type="text" placeholder="Type a message">
+      </div>
+      <input class="btn btn-primary" type="submit" value="Send Message">
+    </form>
+    <br><br>
 
   </div>
 </div>
+
+
+
+
+
+
